reformat using Muxer